# RETFound

./: EYE-AI.md  engine_finetune.py  models_vit.py  pyproject.toml
RETFound/: __init__.py  engine_finetune.py  main_finetune.py
RETFound/util/: __init__.py
util/: misc.py
