[project]
name = "retfound"
version = "0.1.0"
description = "Fork of RETfound repo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub~=0.23.4",
    "matplotlib~=3.8.4",
    "numpy~=1.26.4",
    "opencv-python~=4.9.0.80",
    "pillow~=10.2.0",
    "pycm~=4.0",
    "scikit-learn~=1.4.2",
    "scikit-multilearn~=0.2.0",
    "tensorboard~=2.17.0",
    "timm~=0.9.2",
]

[uv.tool]
package = true

[tool.setuptools]
packages = ["RETFound"]
py-modules = ["models_vit", "engine_finetune", "main_finetune"]

